feat: refactor FileToolServices for improved path validation and search functionality